:lipstick: fix layouts on mobile

--- a/frontend/src/app/cart/cart-view/cart-view.component.css
+++ b/frontend/src/app/cart/cart-view/cart-view.component.css
@@ -61,6 +61,16 @@ mat-card {
   width: 100%;
 }
 
+@media screen and (max-width: 750px) {
+  .content {
+    flex-direction: column;
+  }
+  .content > .overview {
+    flex-grow: 1;
+    width: auto;
+  }
+}
+
 .items {
   flex-grow: 1;
   flex-shrink: 1;
